# qpOASES

./: CMakeLists.txt  README.txt  VERSIONS  VERSIONS.txt  package.xml
examples/: example1.cpp  example1a.cpp  example1b.cpp  example2.cpp  example3.cpp  example3b.cpp  example4.cpp  example5.cpp  exampleLP.cpp  qrecipe.cpp  qrecipeSchur.cpp  qrecipe_data.hpp
include/qp_oases/: Bounds.hpp  Constants.hpp  Constraints.hpp  Flipper.hpp  Indexlist.hpp  Matrices.hpp  MessageHandling.hpp  Options.hpp  QProblem.hpp  QProblemB.hpp  SQProblem.hpp  SQProblemSchur.hpp  SparseSolver.hpp  SubjectTo.hpp  Utils.hpp  qpOASES.hpp
include/qp_oases/extras/: OQPinterface.hpp  SolutionAnalysis.hpp
src/: BLASReplacement.cpp  Bounds.cpp  Constraints.cpp  Flipper.cpp  Indexlist.cpp  LAPACKReplacement.cpp  Matrices.cpp  MessageHandling.cpp  OQPinterface.cpp  Options.cpp  QProblem.cpp  QProblemB.cpp  SQProblem.cpp  SQProblemSchur.cpp  SolutionAnalysis.cpp  SparseSolver.cpp  SubjectTo.cpp  Utils.cpp
test/: TestExample1.cpp  TestExample1a.cpp  TestExample1b.cpp  TestExample2.cpp  TestExample4.cpp  TestExample5.cpp  TestExample6.cpp  TestExample7.cpp  TestExampleLP.cpp  TestExternalCholesky1.cpp  TestGradientShift.cpp  TestGuessedWS1.cpp  TestIdentitySQProblem.cpp  TestIndexList.cpp  TestInfeasible1.cpp  TestJanick1.cpp  TestJanick2.cpp  TestMatrices.cpp  TestReleaseBug.cpp  TestSmallSchur.cpp  TestVanBareIsUnboundedQP.cpp  test_qrecipe_data.hpp
